# boltz-service

./: .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.test  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  test_client.py  test_remote.py  test_sequence.fasta
.github/workflows/: cd.yml  ci.yml  docker-publish.yml
boltz_results_ligand/processed/: manifest.json
boltz_results_ligand/processed/msa/: ligand_0.npz
boltz_results_ligand/processed/structures/: ligand.npz
docker/: Dockerfile.boltz1  Dockerfile.boltz2  Dockerfile.full  build-and-push.sh  entrypoint.sh  inference-slim.Dockerfile  inference.Dockerfile  inference.arm64.Dockerfile  training.Dockerfile
docker/msa/: Dockerfile  README.md  docker-compose.yml  prepare_bfd.sh
docs/: API.md  docker.md
k8s/: boltz-deployment.yaml
k8s/aliyun/: config.yaml  configmap.yaml  deployment.yaml  init-data-configmap.yaml  init-data-job.yaml  storage.yaml
k8s/archive/: deployment.yaml  inference-deployment.yaml  training-deployment.yaml
k8s/aws/: config.yaml  deployment.yaml
k8s/boltz/: deployment.yaml
k8s/monitoring/: grafana-config.yaml  grafana-deployment.yaml  jaeger-deployment.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml
k8s/msa/: README.md  configmap.yaml  init-job.yaml  namespace.yaml  scripts-configmap.yaml  service.yaml  statefulset.yaml  storage.yaml
protos/protos/: common_pb2.py  msa_service.proto  msa_service_pb2_grpc.py
scripts/: create_mock_model.py  deploy-aliyun.sh  deploy-aws.sh  deploy.sh  download-data.sh  download_bfd.sh  download_databases.py  download_db.py  local_setup.sh
scripts/train/: train.py
src/boltz_service/: main.py
src/boltz_service/config/: base.py  server.py
src/boltz_service/data/: types.py
src/boltz_service/data/crop/: boltz.py  cropper.py
src/boltz_service/data/feature/: featurizer.py  symmetry.py
src/boltz_service/data/module/: inference.py  training.py
src/boltz_service/model/: model.py
src/boltz_service/monitoring/: grafana.py  grafana_config.py  service.py
src/boltz_service/protos/: __init__.py  common.proto  generate_protos.sh  inference_service.proto  inference_service_pb2.py  inference_service_pb2_grpc.py  msa_service_pb2.py  training_service.proto  training_service_pb2.py  training_service_pb2_grpc.py
src/boltz_service/services/: __init__.py  inference.py  msa.py  server.py  training.py
src/boltz_service/utils/: database.py  database_config.py  database_downloader.py  db_manager.py  errors.py  logging.py  metrics.py  prometheus.py  redis_cache.py  resources.py  sequence.py  tracing.py
tests/: K8S_TESTING.md  requirements-k8s.txt  test_k8s_deployment.py  test_server.py
(+37 files in other folders)
