[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "boltz-service"
version = "0.1.0"
requires-python = ">=3.9"
description = "Boltz-1"
readme = "README.md"
dependencies = [
    # Deep learning
    "torch>=2.1.0",
    "pytorch-lightning>=2.1.0",
    
    # gRPC and networking
    "grpcio>=1.54.2",
    "grpcio-tools>=1.54.2",
    "grpcio-health-checking>=1.54.2",
    "grpcio-reflection>=1.54.2",
    "protobuf>=4.23.2",
    
    # Scientific computing
    "numpy==1.26.3",
    "scipy==1.13.1",
    "pandas==2.2.3",
    
    # Bio-informatics
    "biopython==1.84",
    "rdkit>=2024.3.2",
    
    # ML utilities
    "hydra-core==1.3.2",
    "dm-tree==0.1.8",
    "einops==0.8.0",
    "einx==0.3.0",
    "fairscale==0.4.13",
    "mashumaro==3.14",
    "modelcif==1.2",
    "wandb==0.18.7",
    
    # Utilities
    "click==8.1.7",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "types-requests",
    "psutil>=5.9.0",
    "redis>=5.0.0",
    
    # Cloud and deployment
    "boto3>=1.26.0",
    "kubernetes>=26.1.0",
]

[project.scripts]
boltz-service = "boltz.main:cli"

[project.optional-dependencies]
lint = ["ruff"]

[tool.ruff]
src = ["src"]
extend-exclude = ["conf.py"]
target-version = "py39"
lint.select = ["ALL"]
lint.ignore = [
    "COM812",  # Conflicts with the formatter
    "ISC001",  # Conflicts with the formatter
    "ANN101",  # "missing-type-self"
    "RET504",  # Unnecessary assignment to `x` before `return` statementRuff
    "S101",    # Use of `assert` detected
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "PT001",   # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "PT004",   # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "PT005",   # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "PT023",   # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "FBT001",
    "FBT002",
    "PLR0913", # Too many arguments to init (> 5)
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = [
    "F401", # Imported but unused
    "F403", # Wildcard imports
]
"docs/**" = [
    "INP001", # Requires __init__.py but folder is not a package.
]
"scripts/**" = [
    "INP001", # Requires __init__.py but folder is not a package.
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`(https://github.com/astral-sh/ruff/issues/5434)
keep-runtime-typing = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"
